--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>    
-    </head>
-    <body>
-        <h1>Customer</h1>
-    </body>
-</html>
+{% extends 'accounts/main.html' %}
+
+{% block content%}
+
+  <p>Customer</p>
+
+{% endblock %}
