--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>    
-    </head>
-    <body>
-        <h1>Dashboard</h1>
-    </body>
-</html>
+{% extends 'accounts/main.html' %}
+
+{% block content %}
+
+  <p>Dashboard</p>
+
+{% endblock  %}
+
