--- a/crm/accounts/templates/accounts/products.html
+++ b/crm/accounts/templates/accounts/products.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>    
-    </head>
-    <body>
-        <h1>Products</h1>
-    </body>
-</html>
+{% extends 'accounts/main.html' %}
+
+{% block content %}
+
+  <p>Product</p>
+
+{% endblock  %}
