--- a/crm/accounts/templates/accounts/main.html
+++ b/crm/accounts/templates/accounts/main.html
@@ -4,8 +4,7 @@
     <title>CRM</title>    
   </head>
   <body>
-    <h1>Navbar</h1>
-    <hr>
+      {% include 'accounts/navbar.html' %}
 
       {% block content %} <!-- basically this is Django's way of making templates more dynamic -->
 
