--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -1,8 +1,15 @@
 {% extends 'accounts/main.html' %}
 
 {% block content %}
-
-  <p>Dashboard</p>
-
+  <div class="container-fluid p-0">
+  <div class="row">
+    <div class="col-md-6">
+      <h5>CUSTOMER</h5>
+    </div>
+    <div class="col-md-6">
+      <h5>LAST 5 ORDERS</h5>
+    </div>
+  </div>
+  </div>
 {% endblock  %}
 
