--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -3,11 +3,24 @@
 {% block content %}
   <div class="container-fluid p-0">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
       <h5>CUSTOMER</h5>
+      <hr>
+      <div class="card card-body">
+        <a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
+        <table>
+          <tr>
+            <th></th>
+            <th>Customer</th>
+            <th>Orders</th>
+          </tr>
+        </table>
+      </div>
     </div>
+
     <div class="col-md-6">
       <h5>LAST 5 ORDERS</h5>
+
     </div>
   </div>
   </div>
