--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -1,28 +1,43 @@
 {% extends 'accounts/main.html' %}
 
 {% block content %}
+
+{% include 'accounts/status.html' %}
+
   <div class="container-fluid p-0">
-  <div class="row">
-    <div class="col-md-4">
-      <h5>CUSTOMER</h5>
-      <hr>
-      <div class="card card-body">
-        <a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
-        <table>
-          <tr>
-            <th></th>
-            <th>Customer</th>
-            <th>Orders</th>
-          </tr>
-        </table>
+    <div class="row">
+      <div class="col-md-5">
+        <h5>CUSTOMER</h5>
+        <hr>
+        <div class="card card-body">
+          <a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
+          <table>
+            <tr>
+              <th></th>
+              <th>Customer</th>
+              <th>Orders</th>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="col-md-7">
+        <h5>LAST 5 ORDERS</h5>
+        <hr>
+        <div class="card card-body">
+          <a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
+          <table>
+            <tr>
+              <th>Product</th>
+              <th>Data Ordered</th>
+              <th>Status</th>
+              <th>Update</th>
+              <th>Remove</th>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
-
-    <div class="col-md-6">
-      <h5>LAST 5 ORDERS</h5>
-
-    </div>
-  </div>
   </div>
 {% endblock  %}
 
