--- a/crm/accounts/templates/accounts/main.html
+++ b/crm/accounts/templates/accounts/main.html
@@ -3,6 +3,17 @@
   <head>
     <title>CRM</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style>
+      body{
+        background-color: #ebeff5;
+      }
+
+      .orders{
+        background-color: #0493fb;
+      }
+    </style>
+  
   </head>
   <body>
       {% include 'accounts/navbar.html' %}
