--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -1,7 +1,45 @@
 {% extends 'accounts/main.html' %}
 
 {% block content%}
+  <br>
+  <div class="container p-0">
+    <div class="row"><!-- First row -->
 
-  <p>Customer</p>
+      <div class="col-md">
+        <div class="card card-body">
+          <h5>Customer</h5>
+          <hr>
+          <button type="button"  class="btn btn-outline-primary btn-sm btn-block">Update</button>
+          <button type="button" class="btn btn-outline-danger btn-sm btn-block">Delete</button>
+        </div>
+      </div>
+
+      <div class="col-md">
+        <div class="card card-body">
+          <h5>Contact Information</h5>
+          <hr>
+          <p class="card-text">Email:</p>
+          <p class="card-text">Phone:</p>
+        </div>
+      </div>
+
+        <div class="col-md">
+          <div class="card card-body">
+            <h5>Total Orders</h5>
+            <hr>
+          </div>
+        </div>
+
+    </div> <!-- First row -->
+
+    <div class="row"><!-- second row -->
+      
+    </div><!-- second row -->
+
+    <div class="row"><!-- third row -->
+      
+    </div><!-- third row -->
+  </div>
 
 {% endblock %}
+
