--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -9,8 +9,8 @@
         <div class="card card-body">
           <h5>Customer</h5>
           <hr>
-          <button type="button"  class="btn btn-outline-primary btn-sm btn-block">Update</button>
-          <button type="button" class="btn btn-outline-danger btn-sm btn-block">Delete</button>
+          <a class="btn btn-outline-primary btn-sm btn-block" href="">Update</a>
+          <a class="btn btn-outline-danger btn-sm btn-block" href="">Delete</a>
         </div>
       </div>
 
@@ -23,17 +23,24 @@
         </div>
       </div>
 
-        <div class="col-md">
-          <div class="card card-body">
-            <h5>Total Orders</h5>
-            <hr>
-          </div>
+      <div class="col-md">
+        <div class="card card-body">
+          <h5>Total Orders</h5>
+          <hr>
+          <h1 style="text-align: center; padding: 10px"></h1>
         </div>
+      </div>
 
     </div> <!-- First row -->
-
+    <br>
     <div class="row"><!-- second row -->
-      
+      <div class="col">
+        <div class="card card-body">
+          <form action="" method="get">
+            <button class="btn btn-primary" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
     </div><!-- second row -->
 
     <div class="row"><!-- third row -->
