--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -34,7 +34,7 @@
     </div> <!-- First row -->
     <br>
     <div class="row"><!-- second row -->
-      <div class="col">
+      <div class="col-md">
         <div class="card card-body">
           <form action="" method="get">
             <button class="btn btn-primary" type="submit">Search</button>
@@ -43,8 +43,22 @@
       </div>
     </div><!-- second row -->
 
+    <br>
     <div class="row"><!-- third row -->
-      
+      <div class="col-md">
+        <div class="card card-body">
+          <table class="table table-sm">
+            <tr>
+              <th>Product</th>
+              <th>Category</th>
+              <th>Date Ordered</th>
+              <th>Status</th>
+              <th>Update</th>
+              <th>Remove</th>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div><!-- third row -->
   </div>
 
