static folder added

--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -2,7 +2,7 @@
 
 {% block content%}
   <br>
-  <div class="container p-0">
+  <div class="container-fluid">
     <div class="row"><!-- First row -->
 
       <div class="col-md">
