--- a/crm/accounts/templates/accounts/main.html
+++ b/crm/accounts/templates/accounts/main.html
@@ -1,19 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>CRM</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <style>
-      body{
-        background-color: #ebeff5;
-      }
-
-      .orders{
-        background-color: #0493fb;
-      }
-    </style>
-  
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
   </head>
   <body>
       {% include 'accounts/navbar.html' %}
