--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -4,7 +4,7 @@
 
 {% include 'accounts/status.html' %}
 
-  <div class="container-fluid p-0">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-5">
         <h5>CUSTOMER</h5>
