--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -13,10 +13,17 @@
           <a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
           <table>
             <tr>
-              <th></th>
               <th>Customer</th>
-              <th>Orders</th>
+              <th>Phone</th>
             </tr>
+
+            {% for customer in customers%}
+              <tr>
+                <td>{{customer.name}}</td>
+                <td>{{customer.phone}}</td>
+              </tr>
+            {% endfor %}
+
           </table>
         </div>
       </div>
@@ -34,6 +41,7 @@
               <th>Update</th>
               <th>Remove</th>
             </tr>
+
           </table>
         </div>
       </div>
