--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -42,6 +42,16 @@
               <th>Remove</th>
             </tr>
 
+            {% for order in orders%}
+              <tr>
+                <td>{{order.product}}</td>
+                <td>{{order.date_created}}</td>
+                <td>{{order.status}}</td>
+                <td><a href="">Update</a></td>
+                <td><a href="">Remove</a></td>
+              </tr>
+            {% endfor %}
+
           </table>
         </div>
       </div>
